--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,13 @@ spring.jackson.time-zone=GMT+8
 #??mapper xml?????
 mybatis-plus.mapper-locations=classpath:xml/*.xml
 mybatis-plus.configuration.map-underscore-to-camel-case=false
+mybatis-plus.type-aliases-package=com.goldnet.duty.entity
+mybatis-plus.configuration.log-impl = org.apache.ibatis.logging.slf4j.Slf4jImpl
+
+
+
+thymeleaf.cache= false
+thymeleaf.prefix= classpath:/templates/    # ???templates????html??
+thymeleaf.suffix= .html
+thymeleaf.encoding= UTF-8
+thymeleaf.mode= HTML5
